tests/cases/typecheck/functions/non-rt-return.stderr
error[0025]: the type `Type` is not runtime instantiable
 --> $DIR/non-rt-return.hash:4:21
3 |   // using types in return position
4 |   bing := (x: i32) -> Type => {
  |                       ^^^^ cannot use this as it isn't runtime instantiable
5 |     i32
