tests/cases/typecheck/functions/non-rt-return.hash
// run=fail

// using types in return position
bing := (x: i32) -> Type => {
  i32
}
